--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,25 @@
 Package: OutilsEquipeHydroSN
 Title: Create A GUI From Scripts Implemented By The Hydro Team (UGB)
 Version: 0.0.0.9000
-Authors@R: person('Serigne bassirou', 'DIOP', email = '09.bachir.diop.10@gmail.com', role = c('cre', 'aut'))
-Description: A "declarative" programming system for creating hydrological graphics and geoprocessing based on the tools developed by the hydrology team of the Leidi() laboratory of the Gaston Berger University of Saint-Louis (Senegal). You provide the data, and he takes care of the details.
-License: MIT + file LICENSE
+Authors@R: 
+    person("Serigne bassirou", "DIOP", , "09.bachir.diop.10@gmail.com", role = c("cre", "aut"))
+Description: A "declarative" programming system for creating hydrological
+    graphics and geoprocessing based on the tools developed by the
+    hydrology team of the Leidi() laboratory of the Gaston Berger
+    University of Saint-Louis (Senegal).  You provide the data, and he
+    takes care of the details.
+License: What license is it under?
+URL: https://github.com/diopBachir/OutilsEquipeHydro.git
+BugReports: https://github.com/diopBachir/OutilsEquipeHydro.git/issues
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.5),
     shiny (>= 1.7.3)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
-URL: https://github.com/diopBachir/OutilsEquipeHydro.git
-BugReports: https://github.com/diopBachir/OutilsEquipeHydro.git/issues
+RoxygenNote: 7.2.2
