--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,53 @@ License: What license is it under?
 URL: https://github.com/diopBachir/OutilsEquipeHydro.git
 BugReports: https://github.com/diopBachir/OutilsEquipeHydro.git/issues
 Imports: 
+    attempt,
     config (>= 0.3.1),
+    data.table,
+    dipsaus,
+    dplyr,
+    DT,
+    DTedit,
+    fields,
+    future,
+    ggh4x,
+    ggpubr,
+    ggrepel,
+    ggspatial,
+    ggthemes,
+    glue,
     golem (>= 0.3.5),
-    shiny (>= 1.7.3)
+    gplots,
+    gstat,
+    here,
+    htmltools,
+    ipc,
+    leaflet,
+    lubridate,
+    modifiedmk,
+    naniar,
+    progress,
+    promises,
+    raster,
+    RColorBrewer,
+    readxl,
+    REdaS,
+    rgdal,
+    rio,
+    rvest,
+    sf,
+    shiny (>= 1.7.3),
+    shinyalert,
+    shinyBS,
+    shinycssloaders,
+    shinyFeedback,
+    shinyjs,
+    shinyWidgets,
+    terra,
+    tidyquant,
+    tools,
+    vroom,
+    writexl
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
