--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ URL: https://github.com/diopBachir/OutilsEquipeHydro.git
 BugReports: https://github.com/diopBachir/OutilsEquipeHydro.git/issues
 Imports: 
     attempt,
+    beepr,
     config (>= 0.3.1),
     data.table,
     dipsaus,
@@ -29,6 +30,7 @@ Imports:
     glue,
     golem (>= 0.3.5),
     gplots,
+    grid,
     gstat,
     here,
     htmltools,
@@ -67,3 +69,5 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.2.2
+Depends: 
+    R (>= 2.10)
