Interface Boxplot Univarié

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(run_app)
 import(shiny)
-import(dplyr)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
@@ -14,3 +13,47 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+import(attempt)
+import(data.table)
+import(dipsaus)
+import(dplyr)
+import(DT)
+import(DTedit)
+import(fields)
+import(future)
+import(ggh4x)
+import(ggpubr)
+import(ggrepel)
+import(ggspatial)
+import(ggthemes)
+import(glue)
+import(gplots)
+import(gstat)
+import(here)
+import(htmltools)
+import(ipc)
+import(leaflet)
+import(lubridate)
+import(modifiedmk)
+import(naniar)
+import(progress)
+import(promises)
+import(raster)
+import(RColorBrewer)
+import(readxl)
+import(REdaS)
+import(rgdal)
+import(rio)
+import(rvest)
+import(sf)
+import(shinyalert)
+import(shinyBS)
+import(shinycssloaders)
+import(shinyFeedback)
+import(shinyjs)
+import(shinyWidgets)
+import(terra)
+import(tidyquant)
+import(tools)
+import(vroom)
+import(writexl)
