Inteface unique boxplot avec facets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ import(lubridate)
 import(modifiedmk)
 import(naniar)
 import(progress)
+import(plyr)
 import(promises)
 import(raster)
 import(RColorBrewer)
@@ -53,6 +54,7 @@ import(shinyFeedback)
 import(shinyjs)
 import(shinyWidgets)
 import(terra)
+import(tidyr)
 import(tidyquant)
 import(tools)
 import(vroom)
