Interface Inventaire Journalier

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ import(shinyBS)
 import(shinycssloaders)
 import(shinyFeedback)
 import(shinyjs)
+import(htmlwidgets)
 import(shinyWidgets)
 import(terra)
 import(tidyr)
@@ -61,3 +62,4 @@ import(tidyquant)
 import(tools)
 import(vroom)
 import(writexl)
+import(naniar)
