--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,3 +71,9 @@ import(modifiedmk)
 import(fuzzyjoin)
 import(trend)
 import(latex2exp)
+import(airGR)
+import(hydroGOF)
+import(ggplot2)
+import(egg)
+import(zoo)
+import(tidyquant)
