--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ License: What license is it under?
 URL: https://github.com/diopBachir/OutilsEquipeHydro.git
 BugReports: https://github.com/diopBachir/OutilsEquipeHydro.git/issues
 Imports: 
+    airGR,
     attempt,
     beepr,
     config (>= 0.3.1),
@@ -20,6 +21,7 @@ Imports:
     dplyr,
     DT,
     DTedit,
+    egg,
     fields,
     future,
     fuzzyjoin,
@@ -36,6 +38,7 @@ Imports:
     here,
     htmltools,
     htmlwidgets,
+    hydroGOF,
     ipc,
     latex2exp,
     leaflet,
@@ -67,7 +70,8 @@ Imports:
     tools,
     trend,
     vroom,
-    writexl
+    writexl,
+    zoo
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
