--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,3 +85,8 @@ import(car)
 import(shinyFiles)
 import(whitebox)
 import(leaflet.extras)
+
+
+#|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||--
+import(ncdf4)
+import(jsonlite)
